2008-09-07	fabian

	* Incorporated the "blur" patch provided by Dean Scarff.
	* Incorporated the "drop folder" patch provided by Rafael Gaspar (#1789464).
	* Fixed the URL characters (#1773764)
	* Fixed the transparency setting bug.
	
2008-09-06	ujwal
	
	* Moved Growl notification of session bell from VT100Screen to VT100Session.
	* Disabled session bell Growl notification when key repeat is detected.
	
2008-09-04	fabian

	* Removed the close button of the About window (#1916989).
	* Fixed a script error (#1883879).
	* Fixed resizing background image problem (#1871380).
	* Fixed a bug that closes the wrong tab when using contextual menu. (#1916982)
	
2008-09-03	fabian

	* Fixed a bug that causes iTerm to crash when executing scripts.
	
2008-09-03  delx

	* A few documentation spelling and grammar fixes.
	* Fixed borders once and for all.
	* Full-screen mode hides menubar rather than pretending to be
	  a screensaver. This fixes Apple-Tab and other things.
	* Fixed enter key on the numeric keypad in keypad app mode
	* Fixed iTerm so that it can start with no preferences file again

2008-08-27	fabian

	* Incorporated two patches provided by Akinori MUSHA (knu). They fixed two double-width character issues.
	
2008-08-21	fabian

	* Fixed a bug that causes loss of preferences when upgrade.
	
2008-08-21  delx

	* Compiles & runs!
	* Better default preferences
	* Works with TERM=xterm
	* Sets the COLORFGBG variable
	* No annoying reverse-video border
	* tput smso ; clear ; tput rmso -- works as expected
	* back_tab supported (the key and the function)
	* new-style xterm altscreens supported
	* Fixed NSLock warnings on 10.5
	* Horizontal scroll-wheel doesn't scroll vertically anymore
	* Improved numeric keypad behaviour, now acts like xterm
	* Fixed a nasty crashing bug

2007-11-20  fabian

    * Added ESC[s and ESC[u to save and restore cursor, based on the patch from SF's bug report.
    
2007-09-08	dnedrow
